# KERNEL-TOOL

./: LICENSE  README.md  config.py  home.py
cpp_calculator/: CMakeLists.txt  README.md
cpp_calculator/src/: main.cpp
cpp_calculator/src/app/: application_controller.cpp  application_controller.h
cpp_calculator/src/core/: expression_engine.cpp  expression_engine.h
cpp_calculator/src/services/: history_service.cpp  history_service.h  notes_service.cpp  notes_service.h  settings_service.cpp  settings_service.h
cpp_calculator/src/ui/: main_window.cpp  main_window.h
cpp_calculator/themes/: dark.qss
modules/cyber_defense/: __init__.py  file_analyzer.py  menu.py  network_monitor.py  password_analyzer.py  phishing_detector.py  port_scanner.py
modules/data/: __init__.py  alerts.py  analytics.py  logger.py  pipeline.py  storage.py  summary.py
modules/osint/: __init__.py  domain_analysis.py  footprint.py  identity_mapping.py  menu.py  reputation.py  reverse_image.py  search.py
modules/web_recon/: __init__.py  archive_explorer.py  cli.py  common.py  headers_analysis.py  link_extractor.py  performance_scan.py  site_mapper.py  tech_detection.py
osint/: data_sites.py  osint_1.py  osint_2.py  osint_3.py  osint_4.py  osint_4_data.json  osint_5.py  osint_6.py
pages/: page_1.py  page_10.py  page_2.py  page_3.py  page_4.py  page_5.py  page_6.py  page_7.py  page_8.py  page_9.py
utils/: animation.py
